--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,17 @@
 on: [push]
 
 jobs:
-  hello_world_job:
+  test:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: Test
+
     steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.11
+      uses: actions/setup-java@v1
     - name: Hello world action step
-      id: hello
-      uses: mlutze/flix-test-action@test
+      id: flix-test
+      uses: mlutze/flix-test-action@v0.1
       with:
-        who-to-greet: 'Matt'
-    # Use the output from the `hello` step
-    - name: Get the output time
-      run: echo "The time was ${{ steps.hello.outputs.time }}"
+        flix-version: 'v0.14.3'
 
