--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
+      with:
+        java-version: 1.11
     - name: Hello world action step
       id: flix-test
       uses: mlutze/flix-test-action@v0.1
