--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-on: [push]
+on: [pull_request]
 
 jobs:
   test:
@@ -11,9 +11,9 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
-    - name: Test Flix
-      id: flix-test
-      uses: mlutze/flix-test-action@v0.1
+    - name: Get Flix
+      uses: wei/curl@master
       with:
-        flix-version: 'v0.14.3'
+        args: -L https://github.com/flix/flix/releases/download/v0.14.3/flix.jar
+    - run: java -jar flix.jar test
 
