update and add TypeClass examples (also ListZipper)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
-    - run: curl -L https://github.com/flix/flix/releases/download/v0.14.4/flix.jar > flix.jar
+    - run: curl -L https://flix.dev/nightly/flix-2021-05-12.jar > flix.jar
     - run: java -jar flix.jar test
 
